Migration from legacy java date to java 8 localdate and localdatetime + new jackson deserializers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.datasource.hikari.max-lifetime=30000
 #logging.level.org.hibernate.type=TRACE
 
 #Gestion de l'encodage des dates dans les JSON
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-spring.jackson.time-zone=Europe/Paris
+#spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+#spring.jackson.time-zone=Europe/Paris
 
 # :)
 spring.banner.location=banner.txt
@@ -46,14 +46,14 @@ rna.api.path=/api/rna/v1
 #Contants
 accounting.account.number.customer=400
 accounting.account.number.provider=401
-miscellaneous.country.code.france = "FR"
-miscellaneous.country.code.monaco = "MC"
-miscellaneous.department.code.martinique = "972"
-miscellaneous.department.code.guadeloupe = "971"
-miscellaneous.department.code.reunion = "974"
+miscellaneous.country.code.france = FR
+miscellaneous.country.code.monaco = MC
+miscellaneous.department.code.martinique = 972
+miscellaneous.department.code.guadeloupe = 971
+miscellaneous.department.code.reunion = 974
 accounting.vat.code.twenty=20
-accounting.vat.code.eight=8
+accounting.vat.code.eight=8.5
 miscellaneous.document.code.billing = 4
-miscellaneous.document.billing.label.type.customer.code="CLIENT"
-miscellaneous.document.billing.label.type.affaire.code="AFFAIRE"
-miscellaneous.document.billing.label.type.other.code="AUTRES"
+miscellaneous.document.billing.label.type.customer.code=CLIENT
+miscellaneous.document.billing.label.type.affaire.code=AFFAIRE
+miscellaneous.document.billing.label.type.other.code=AUTRES
