first part of accounting records generation + revision of invoice / invoice item model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,8 +44,10 @@ rna.api.entrypoint=https://entreprise.data.gouv.fr
 rna.api.path=/api/rna/v1
 
 #Contants
-accounting.account.number.customer=400
+accounting.account.number.customer=410
 accounting.account.number.provider=401
+accounting.account.number.product=706
+accounting.journal.code.sales=VENTES
 miscellaneous.country.code.france = FR
 miscellaneous.country.code.monaco = MC
 miscellaneous.department.code.martinique = 972
