--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,12 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.6.4'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.4' 
+
+    implementation 'org.springframework.boot:spring-boot-starter-security:2.6.4'
+    implementation 'org.springframework.ldap:spring-ldap-core:2.4.1'
+    implementation 'org.springframework.boot:spring-boot-starter-data-ldap:2.7.3'
+    implementation 'org.springframework.security:spring-security-ldap:5.7.3'
+    
     implementation 'org.hibernate:hibernate-c3p0:5.6.2.Final'
 	implementation 'org.postgresql:postgresql:42.3.5' 
 	implementation 'org.apache.commons:commons-collections4:4.4'
