--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,23 @@ spring.datasource.hikari.max-lifetime=30000
 #spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.hibernate.type=TRACE
 
+# Set to false in other environment than dev
+dev.mode=true
+
 #Spring Fox - Swagger configuration
 springfox.documentation.enabled=false
+
+#LDAP Configuration
+#logging.level.org.springframework.security=DEBUG
+ldap.dc.level.0=fr
+ldap.dc.level.1=jss
+ldap.ou.osiris=OSIRIS
+ldap.group.osiris.users=OSIRIS_Utilisateurs
+ldap.server.host=serv-ad1.jss.fr
+ldap.server.port=3268
+ldap.manager.login=CN=Browser AD,OU=Systeme,OU=JSS_UTILISATEURS,DC=jss,DC=fr
+ldap.manager.password=RMSgz9Yp
+server.servlet.session.timeout=360m
 
 # :)
 spring.banner.location=banner.txt
