--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
     maven { 
             url = uri('https://repo1.maven.org/maven2/')
         } 
-}
+} 
  
  
 dependencies {
@@ -41,6 +41,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.7.1'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+    implementation 'org.apache.poi:poi-ooxml:5.2.2'
+    implementation 'org.apache.poi:poi:5.2.2'
+
   
     runtimeOnly 'org.springframework.boot:spring-boot-devtools:2.6.4'
 }
