--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@juggle/resize-observer": "^3.3.1",
     "ajv": "^8.10.0",
     "html-to-rtf-browser": "^1.6.1",
+    "mat-table-exporter": "^10.2.4",
     "ngx-progressbar": "^6.1.1",
     "ngx-quill": "^18.0.0",
     "rxjs": "^7.5.6",
