start association invoice reglement

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:postgresql://bdd-dev.osiris.jss.fr:5432/osiris
 spring.datasource.url=jdbc:postgresql://localhost:5432/jss
+#spring.datasource.username=osiris
 spring.datasource.username=jss
 spring.datasource.password=q4@%Uy>4F2B=
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -30,12 +32,19 @@ ldap.server.port=3268
 ldap.manager.login=CN=Browser AD,OU=Systeme,OU=JSS_UTILISATEURS,DC=jss,DC=fr
 ldap.manager.password=RMSgz9Yp
 server.servlet.session.timeout=360m
+spring.data.redis.repositories.type = none
 
 # :)
 spring.banner.location=banner.txt
 
 #Cache configuration
 spring.cache.jcache.config=classpath:ehcache.xml
+hibernate.cache.use_second_level_cache=true
+hibernate.cache.region.factory_class=org.hibernate.cache.jcache.JCacheRegionFactory
+spring.jpa.properties.javax.persistence.sharedCache.mode=ALL
+spring.jpa.properties.hibernate.javax.cache.missing_cache_strategy=create
+#spring.jpa.properties.hibernate.generate_statistics=true
+#logging.level.org.hibernate.stat=DEBUG
 
 #Max upload size serverside
 spring.servlet.multipart.max-file-size=5MB
