--- a/build.gradle
+++ b/build.gradle
@@ -26,15 +26,15 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-security:2.6.4'
     implementation 'org.springframework.ldap:spring-ldap-core:2.4.1'
-    implementation 'org.springframework.boot:spring-boot-starter-data-ldap:2.7.3'
     implementation 'org.springframework.security:spring-security-ldap:5.7.3'
     
-    implementation 'org.hibernate:hibernate-c3p0:5.6.2.Final'
+    implementation 'org.hibernate:hibernate-c3p0:5.6.9.Final'
 	implementation 'org.postgresql:postgresql:42.3.5' 
 	implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'org.springframework.boot:spring-boot-starter-cache:2.6.4'
     implementation 'org.ehcache:ehcache:3.9.7'
+    implementation 'org.hibernate:hibernate-jcache:5.6.9.Final'
     implementation 'commons-validator:commons-validator:1.7'
     implementation 'com.itextpdf:itextpdf:5.5.13.3'
     implementation 'com.itextpdf:html2pdf:4.0.2'
@@ -43,6 +43,7 @@ dependencies {
     implementation 'io.springfox:springfox-swagger-ui:3.0.0'
     implementation 'org.apache.poi:poi-ooxml:5.2.2'
     implementation 'org.apache.poi:poi:5.2.2'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5:2.13.3'
 
   
     runtimeOnly 'org.springframework.boot:spring-boot-devtools:2.6.4'
