--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,7 +72,7 @@ rna.api.path=/api/rna/v1
 #Schedulling of daily accounting close batch
 schedulling.account.daily.close=0 50 23 * * ?
 #Schedulling of payment grab from bank
-schedulling.payment.grab=0 * * * * ?
+schedulling.payment.grab=0 0/5 0 * * ?
 
 #Contants
 accounting.account.number.customer=411
