--- a/client/package.json
+++ b/client/package.json
@@ -23,11 +23,10 @@
     "@juggle/resize-observer": "^3.3.1",
     "ajv": "^8.10.0",
     "echarts": "^5.4.0",
-    "html-to-rtf-browser": "^1.6.1",
     "mat-table-exporter": "^10.2.4",
     "ngx-echarts": "^14.0.0",
     "ngx-progressbar": "^9.0.0",
-    "ngx-quill": "^18.0.0",
+    "ngx-trumbowyg": "^6.0.7",
     "rxjs": "^7.5.6",
     "tslib": "^2.1.0",
     "zone.js": "^0.11.4"
@@ -38,7 +37,6 @@
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "^3.6.0",
     "@types/node": "^12.20.55",
-    "@types/quill": "^1.3.10",
     "jasmine-core": "^3.99.0",
     "karma": "^6.3.16",
     "karma-chrome-launcher": "^3.1.0",
