--- a/client/angular.json
+++ b/client/angular.json
@@ -31,14 +31,7 @@
               "src/styles.css",
               "src/theme.scss"
             ],
-            "scripts": [
-              "./node_modules/jquery/dist/jquery.js",
-              "./node_modules/trumbowyg/dist/trumbowyg.min.js",
-              "./node_modules/trumbowyg/dist/plugins/table/trumbowyg.table.min.js",
-              "./node_modules/trumbowyg/dist/plugins/colors/trumbowyg.colors.min.js",
-              "./node_modules/trumbowyg/dist/plugins/fontsize/trumbowyg.fontsize.min.js",
-              "./node_modules/trumbowyg/dist/langs/fr.min.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
