--- a/client/package.json
+++ b/client/package.json
@@ -21,13 +21,13 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "@juggle/resize-observer": "^3.3.1",
+    "@tinymce/tinymce-angular": "^7.0.0",
     "ajv": "^8.10.0",
     "echarts": "^5.4.0",
     "mat-table-exporter": "^10.2.4",
     "ng-webdatarocks": "^1.4.7",
     "ngx-echarts": "^14.0.0",
     "ngx-progressbar": "^9.0.0",
-    "ngx-trumbowyg": "^6.0.7",
     "rxjs": "^7.5.6",
     "tslib": "^2.1.0",
     "zone.js": "^0.11.4"
