--- a/client/angular.json
+++ b/client/angular.json
@@ -27,11 +27,18 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
-              "src/theme.scss"
+              "src/theme.scss",
+              "node_modules/pivottable/dist/pivot.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/jquery-ui-dist/jquery-ui.min.js",
+              "node_modules/pivottable/dist/pivot.min.js",
+              "node_modules/pivottable/dist/gchart_renderers.min.js",
+              "node_modules/pivottable/dist/pivot.fr.js"
+            ]
           },
           "configurations": {
             "production": {
