--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,7 @@ dependencies {
 }
  
 group = 'com.jss.osiris'
-version = '3.0-beta3'
+version = '3.0'
 description = 'Outil Sympa, Interactif, Révolutionnairement Intuitif et Simple'
 sourceCompatibility = '17'
 targetCompatibility = '17'
