--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,7 @@ dependencies {
 }
  
 group = 'com.jss.osiris'
-version = '6.0'
+version = '7.0-beta1'
 description = 'Outil Sympa, Interactif, Révolutionnairement Intuitif et Simple'
 sourceCompatibility = '17'
 targetCompatibility = '17'
