--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ dependencies {
 }
  
 group = 'com.jss.osiris'
-version = '8.0'
+version = '9.0-beta1'
 description = 'Outil Sympa, Interactif, Révolutionnairement Intuitif et Simple'
 sourceCompatibility = '17'
 targetCompatibility = '17'
