--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,11 @@ dependencies {
     implementation 'com.google.zxing:core:3.5.1'
     implementation 'com.google.zxing:javase:3.5.1'
 
+    // Azure libs
+    implementation 'com.azure:azure-ai-formrecognizer:4.0.6'
+    implementation 'com.azure:azure-identity:1.8.3'
+
+
 }
  
 group = 'com.jss.osiris'
