--- a/client/angular.json
+++ b/client/angular.json
@@ -30,6 +30,7 @@
             ],
             "styles": [
               "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/pivottable/dist/pivot.css",
               "src/styles.css",
               "src/theme.scss"
             ],
