--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ dependencies {
 }
  
 group = 'com.jss.osiris'
-version = '17.0-beta1'
+version = '19.0'
 description = 'Outil Sympa, Interactif, Révolutionnairement Intuitif et Simple'
-sourceCompatibility = '19'
-targetCompatibility = '19'
+sourceCompatibility = '17'
+targetCompatibility = '17'
