--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ dependencies {
 }
  
 group = 'com.jss.osiris'
-version = '22'
+version = '22-beta1'
 description = 'Outil Sympa, Interactif, Révolutionnairement Intuitif et Simple'
 sourceCompatibility = '17'
 targetCompatibility = '17'
