--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,9 @@
     "@angular/platform-browser": "^16.0.1",
     "@angular/platform-browser-dynamic": "^16.0.1",
     "@angular/router": "^16.0.1",
+    "@ckeditor/ckeditor5-angular": "^9.0.0",
     "@juggle/resize-observer": "^3.3.1",
-    "@tinymce/tinymce-angular": "^7.0.0",
+    "ckeditor5": "^43.1.0",
     "echarts": "^5.4.3",
     "jquery": "^3.7.0",
     "jquery-ui": "^1.13.2",
