--- a/client-myjss/package.json
+++ b/client-myjss/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.3",
+    "@ckeditor/ckeditor5-angular": "^9.0.0",
+    "ckeditor5": "^43.2.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
