--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation 'com.hazelcast:hazelcast-all:4.2.7'
     implementation 'com.hazelcast:hazelcast-hibernate53:5.0.0'
 
-    // Database
+    // Database 
     implementation 'org.hibernate.orm:hibernate-c3p0:6.4.4.Final'
 	implementation 'org.postgresql:postgresql:42.7.3' 
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5-jakarta:2.17.0'
@@ -54,6 +54,7 @@ dependencies {
     implementation 'org.xhtmlrenderer:flying-saucer-core:9.7.1'
     implementation 'org.xhtmlrenderer:flying-saucer-pdf-itext5:9.7.1'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.17.0'
+    implementation 'org.jsoup:jsoup:1.18.1'
 
     // QR code generation
     implementation 'com.google.zxing:core:3.5.3'
@@ -61,7 +62,8 @@ dependencies {
 
     // Azure libs
     implementation 'com.azure:azure-ai-formrecognizer:4.1.6'
-    implementation 'com.azure:azure-identity:1.11.4'
+    implementation 'com.azure:azure-identity:1.11.4' 
+
 }
  
 group = 'com.jss.osiris'
