--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ repositories {
             url = uri('https://repo1.maven.org/maven2/')
         } 
 } 
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-parameters"
+}
   
   
 dependencies {
