--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ tasks.withType(JavaCompile) {
     options.compilerArgs << "-parameters"
 }
   
+  tasks.withType(JavaCompile) {
+    options.compilerArgs << "-parameters"
+}
   
 dependencies {
     // Spring
