Corrections review code

--- a/client-myjss/angular.json
+++ b/client-myjss/angular.json
@@ -37,9 +37,9 @@
                 "bundleName": "swiper.min.css"
               },
               {
-                "input": "src/assets/css/theme.min.css",
+                "input": "src/assets/css/theme.css",
                 "inject": true,
-                "bundleName": "theme.min.css"
+                "bundleName": "theme.css"
               }
             ],
             "scripts": [
