--- a/client-myjss/package.json
+++ b/client-myjss/package.json
@@ -24,6 +24,8 @@
     "@ckeditor/ckeditor5-angular": "^9.0.0",
     "ckeditor5": "^43.2.0",
     "express": "^4.18.2",
+    "jarallax": "^2.2.1",
+    "ngx-drag-scroll": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
