--- a/client-myjss/package.json
+++ b/client-myjss/package.json
@@ -24,7 +24,9 @@
     "@ckeditor/ckeditor5-angular": "^9.0.0",
     "ckeditor5": "^43.2.0",
     "express": "^4.18.2",
+    "jarallax": "^2.2.1",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
