--- a/client-myjss/package.json
+++ b/client-myjss/package.json
@@ -15,28 +15,31 @@
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
-    "@angular/forms": "^17.2.0",
+    "@angular/forms": "^17.3.12",
     "@angular/platform-browser": "^17.2.0",
-    "@angular/platform-browser-dynamic": "^17.2.0",
-    "@angular/platform-server": "^17.2.0",
-    "@angular/router": "^17.2.0",
-    "@angular/ssr": "^17.2.3",
-    "@ckeditor/ckeditor5-angular": "^9.0.0",
+    "@angular/platform-browser-dynamic": "^17.3.12",
+    "@angular/platform-server": "^17.3.12",
+    "@angular/router": "^17.3.12",
+    "@angular/ssr": "^17.3.13",
+    "@ckeditor/ckeditor5-angular": "^9.1.0",
+    "angular-tooltips": "^1.2.2",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "ckeditor5": "^43.2.0",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "jarallax": "^2.2.1",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.5",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "tslib": "^2.8.1",
+    "zone.js": "^0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.2.3",
-    "@angular/cli": "^17.2.3",
-    "@angular/compiler-cli": "^17.2.0",
-    "@types/express": "^4.17.17",
+    "@angular-devkit/build-angular": "^17.3.13",
+    "@angular/cli": "^17.3.13",
+    "@angular/compiler-cli": "^17.3.12",
+    "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
+    "@types/node": "^18.19.80",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
