--- a/client-jss/angular.json
+++ b/client-jss/angular.json
@@ -120,7 +120,17 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+                {
+                  "input": "src/assets/css/font-awesome/all.min.css",
+                  "inject": true,
+                  "bundleName": "all.min.css"
+                },
+                {
+                  "input": "src/assets/css/bootstrap-icons.css",
+                  "inject": true,
+                  "bundleName": "bootstrap-icons.css"
+                }
             ],
             "scripts": []
           }
