--- a/client-myjss/package.json
+++ b/client-myjss/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^19.2.4",
     "@angular/ssr": "^19.2.5",
     "@ckeditor/ckeditor5-angular": "^9.0.0",
+    "angular-ng-autocomplete": "^2.0.12",
     "ckeditor5": "^43.2.0",
     "express": "^4.18.2",
     "jarallax": "^2.2.1",
