--- a/client-jss/package.json
+++ b/client-jss/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^19.2.4",
     "@angular/platform-server": "^19.2.4",
     "@angular/router": "^19.2.4",
+    "@types/bootstrap": "^5.2.10",
+    "bootstrap": "^5.3.6",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
