--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.4'
     implementation 'org.springframework.boot:spring-boot-starter-cache:3.2.4'
     implementation 'com.hazelcast:hazelcast:5.5.0'
+    implementation 'com.hazelcast:hazelcast-spring:5.5.0'
+    implementation 'javax.cache:cache-api:1.1.1'
     implementation 'com.hazelcast:hazelcast-hibernate53:5.2.0'
 
     // Database  
