--- a/client-myjss/angular.json
+++ b/client-myjss/angular.json
@@ -32,7 +32,9 @@
                 "input": "src/assets/css/swiper.min.css",
                 "inject": true,
                 "bundleName": "swiper.min.css"
-              }
+              },
+              "src/assets/css/theme.css",
+              "src/assets/css/theme-account.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
