--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.2.4'
     implementation 'org.apache.poi:poi-ooxml:5.2.5'
     implementation 'org.apache.poi:poi:5.2.5'
+
+    implementation 'org.apache.pdfbox:pdfbox:2.0.30'
+
     implementation 'org.xhtmlrenderer:flying-saucer-core:9.7.1'
     implementation 'org.xhtmlrenderer:flying-saucer-pdf-itext5:9.7.1'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.17.0'
