--- a/build.gradle
+++ b/build.gradle
@@ -80,7 +80,7 @@ dependencies {
 }
  
 group = 'com.jss.osiris'
-version = '25-beta1' 
+version = '25' 
 description = 'Outil Sympa, Interactif, Révolutionnairement Intuitif et Simple'
 sourceCompatibility = '17'
 targetCompatibility = '17'
