--- a/client-osiris/angular.json
+++ b/client-osiris/angular.json
@@ -123,7 +123,10 @@
               "buildTarget": "client-osiris:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "port": 4203
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
