--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     // PDF, XML, Office & HTML generation
     implementation 'com.itextpdf:itextpdf:5.5.13.3'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.2.4'
+    implementation 'ch.digitalfondue.mjml4j:mjml4j:1.0.3'
+    implementation 'org.jsoup:jsoup:1.21.2'
     implementation 'org.apache.poi:poi-ooxml:5.2.5'
     implementation 'org.apache.poi:poi:5.2.5'
     implementation 'org.xhtmlrenderer:flying-saucer-core:9.7.1'
