--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,14 @@ buildscript {
     }
 }
 
-
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot' 
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(23)
+    }
+}
 
 repositories {
     maven {  
@@ -25,7 +30,6 @@ tasks.withType(JavaCompile) {
 }
 
 def excludeInfinispan = project.hasProperty('excludeInfinispan') && project.excludeInfinispan == 'true'
-
 tasks.named('processResources') {
     if (excludeInfinispan) {
         exclude 'infinispan.xml'
@@ -33,6 +37,7 @@ tasks.named('processResources') {
 }
 
 dependencies {
+    developmentOnly "org.springframework.boot:spring-boot-devtools"
     // Spring
     implementation 'org.springframework.boot:spring-boot-starter-web:3.2.4'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.4' 
@@ -81,6 +86,3 @@ dependencies {
 group = 'com.jss.osiris'
 version = '26' 
 description = 'Outil Sympa, Interactif, Révolutionnairement Intuitif et Simple'
-sourceCompatibility = '17'
-targetCompatibility = '17'
- 
