first reporting commit

--- a/client-osiris/package.json
+++ b/client-osiris/package.json
@@ -1,109 +1,112 @@
 {
-    "name": "inspinia-ng",
-    "version": "1.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "watch": "ng build --watch --configuration development",
-        "test": "ng test"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^19.2.13",
-        "@angular/cdk": "^19.2.17",
-        "@angular/common": "^19.2.11",
-        "@angular/compiler": "^19.2.11",
-        "@angular/core": "^19.2.11",
-        "@angular/forms": "^19.2.11",
-        "@angular/localize": "^19.2.11",
-        "@angular/platform-browser": "^19.2.11",
-        "@angular/router": "^19.2.11",
-        "@bluehalo/ngx-leaflet": "^19.0.0",
-        "@fullcalendar/angular": "^6.1.17",
-        "@fullcalendar/core": "^6.1.17",
-        "@fullcalendar/daygrid": "^6.1.17",
-        "@fullcalendar/interaction": "^6.1.17",
-        "@fullcalendar/timegrid": "^6.1.17",
-        "@ng-bootstrap/ng-bootstrap": "^18.0.0",
-        "@ng-icons/core": "^31.4.0",
-        "@ng-icons/tabler-icons": "^31.4.0",
-        "angular-datatables": "^19.0.0",
-        "angular-shepherd": "^19.0.2",
-        "angular2-ladda": "^5.0.0",
-        "angularx-flatpickr": "^8.1.0",
-        "animate.css": "^4.1.1",
-        "apexcharts": "^4.7.0",
-        "apextree": "^1.3.0",
-        "bootstrap": "^5.3.6",
-        "choices.js": "^11.1.0",
-        "datatables": "^1.10.18",
-        "datatables.net": "^2.3.1",
-        "datatables.net-bs5": "^2.3.1",
-        "datatables.net-buttons": "^3.2.3",
-        "datatables.net-buttons-bs5": "^3.2.3",
-        "datatables.net-buttons-dt": "^3.2.3",
-        "datatables.net-fixedheader-bs5": "^4.0.2",
-        "datatables.net-responsive-bs5": "^3.0.4",
-        "datatables.net-select": "^3.0.1",
-        "datatables.net-select-bs5": "^3.0.1",
-        "daterangepicker": "^3.1.0",
-        "dayjs": "^1.11.13",
-        "diff": "^8.0.2",
-        "echarts": "^5.6.0",
-        "filepond": "^4.32.7",
-        "filepond-plugin-file-validate-size": "^2.2.8",
-        "filepond-plugin-file-validate-type": "^1.2.9",
-        "filepond-plugin-image-preview": "^4.6.12",
-        "flatpickr": "^4.6.13",
-        "glightbox": "^3.3.1",
-        "jquery": "^3.7.1",
-        "jsvectormap": "1.3.3",
-        "jszip": "^3.10.1",
-        "ladda": "^2.0.3",
-        "leaflet": "^1.9.4",
-        "lucide-angular": "^0.511.0",
-        "ng-apexcharts": "1.15.0",
-        "ng-otp-input": "^2.0.7",
-        "ng-select2-component": "^17.2.7",
-        "ng2-nouislider": "^2.0.0",
-        "ng2-pdf-viewer": "^10.4.0",
-        "ngx-color": "^10.0.0",
-        "ngx-countup": "^13.2.0",
-        "ngx-daterangepicker-bootstrap": "^19.5.5",
-        "ngx-dropzone-wrapper": "^17.0.0",
-        "ngx-echarts": "^19.0.0",
-        "ngx-filepond": "^7.0.3",
-        "ngx-mask": "^19.0.7",
-        "ngx-masonry": "^14.0.1",
-        "ngx-quill": "^27.0.2",
-        "ngx-tagify": "^18.0.0",
-        "nouislider": "^15.8.1",
-        "quill": "^2.0.3",
-        "rxjs": "~7.8.0",
-        "shepherd.js": "^14.5.0",
-        "simplebar": "^6.3.1",
-        "simplebar-angular": "^3.3.1",
-        "spinkit": "^2.0.1",
-        "sweetalert2": "^11.22.0",
-        "tslib": "^2.3.0",
-        "zone.js": "~0.15.0"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "^19.2.8",
-        "@angular/cli": "^19.2.8",
-        "@angular/compiler-cli": "^19.2.11",
-        "@types/datatables.net-select": "^1.2.10",
-        "@types/daterangepicker": "^3.1.8",
-        "@types/jasmine": "~5.1.0",
-        "@types/leaflet": "^1.9.18",
-        "@types/node": "^18.18.0",
-        "jasmine-core": "~5.6.0",
-        "karma": "~6.4.0",
-        "karma-chrome-launcher": "~3.2.0",
-        "karma-coverage": "~2.2.0",
-        "karma-jasmine": "~5.1.0",
-        "karma-jasmine-html-reporter": "~2.1.0",
-        "typescript": "~5.7.2"
-    }
+  "name": "inspinia-ng",
+  "version": "1.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^19.2.13",
+    "@angular/cdk": "^19.2.17",
+    "@angular/common": "^19.2.11",
+    "@angular/compiler": "^19.2.11",
+    "@angular/core": "^19.2.11",
+    "@angular/forms": "^19.2.11",
+    "@angular/localize": "^19.2.11",
+    "@angular/platform-browser": "^19.2.11",
+    "@angular/router": "^19.2.11",
+    "@bluehalo/ngx-leaflet": "^19.0.0",
+    "@fullcalendar/angular": "^6.1.17",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@ng-icons/core": "^31.4.0",
+    "@ng-icons/tabler-icons": "^31.4.0",
+    "@tanstack/angular-table": "^8.21.3",
+    "angular-datatables": "^19.0.0",
+    "angular-shepherd": "^19.0.2",
+    "angular2-ladda": "^5.0.0",
+    "angularx-flatpickr": "^8.1.0",
+    "animate.css": "^4.1.1",
+    "apexcharts": "^4.7.0",
+    "apextree": "^1.3.0",
+    "bootstrap": "^5.3.6",
+    "choices.js": "^11.1.0",
+    "datatables": "^1.10.18",
+    "datatables.net": "^2.3.1",
+    "datatables.net-bs5": "^2.3.1",
+    "datatables.net-buttons": "^3.2.3",
+    "datatables.net-buttons-bs5": "^3.2.3",
+    "datatables.net-buttons-dt": "^3.2.3",
+    "datatables.net-fixedheader-bs5": "^4.0.2",
+    "datatables.net-responsive-bs5": "^3.0.4",
+    "datatables.net-select": "^3.0.1",
+    "datatables.net-select-bs5": "^3.0.1",
+    "daterangepicker": "^3.1.0",
+    "dayjs": "^1.11.13",
+    "diff": "^8.0.2",
+    "echarts": "^5.6.0",
+    "file-saver": "^2.0.5",
+    "filepond": "^4.32.7",
+    "filepond-plugin-file-validate-size": "^2.2.8",
+    "filepond-plugin-file-validate-type": "^1.2.9",
+    "filepond-plugin-image-preview": "^4.6.12",
+    "flatpickr": "^4.6.13",
+    "glightbox": "^3.3.1",
+    "jquery": "^3.7.1",
+    "jsvectormap": "1.3.3",
+    "jszip": "^3.10.1",
+    "ladda": "^2.0.3",
+    "leaflet": "^1.9.4",
+    "lucide-angular": "^0.511.0",
+    "ng-apexcharts": "1.15.0",
+    "ng-otp-input": "^2.0.7",
+    "ng-select2-component": "^17.2.7",
+    "ng2-nouislider": "^2.0.0",
+    "ng2-pdf-viewer": "^10.4.0",
+    "ngx-color": "^10.0.0",
+    "ngx-countup": "^13.2.0",
+    "ngx-daterangepicker-bootstrap": "^19.5.5",
+    "ngx-dropzone-wrapper": "^17.0.0",
+    "ngx-echarts": "^19.0.0",
+    "ngx-filepond": "^7.0.3",
+    "ngx-mask": "^19.0.7",
+    "ngx-masonry": "^14.0.1",
+    "ngx-quill": "^27.0.2",
+    "ngx-tagify": "^18.0.0",
+    "nouislider": "^15.8.1",
+    "quill": "^2.0.3",
+    "rxjs": "~7.8.0",
+    "shepherd.js": "^14.5.0",
+    "simplebar": "^6.3.1",
+    "simplebar-angular": "^3.3.1",
+    "spinkit": "^2.0.1",
+    "sweetalert2": "^11.22.0",
+    "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
+    "zone.js": "~0.15.0"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^19.2.8",
+    "@angular/cli": "^19.2.8",
+    "@angular/compiler-cli": "^19.2.11",
+    "@types/datatables.net-select": "^1.2.10",
+    "@types/daterangepicker": "^3.1.8",
+    "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.18",
+    "@types/node": "^18.18.0",
+    "jasmine-core": "~5.6.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.7.2"
+  }
 }
