--- a/client-osiris/package.json
+++ b/client-osiris/package.json
@@ -31,6 +31,7 @@
     "@tanstack/angular-table": "^8.21.3",
     "angular-datatables": "^19.0.0",
     "angular-shepherd": "^19.0.2",
+    "angular-ng-autocomplete": "^2.0.12",
     "angular2-ladda": "^5.0.0",
     "angularx-flatpickr": "^8.1.0",
     "animate.css": "^4.1.1",
@@ -67,7 +68,6 @@
     "lucide-angular": "^0.511.0",
     "ng-apexcharts": "1.15.0",
     "ng-otp-input": "^2.0.7",
-    "ng-select2-component": "^17.2.7",
     "ng2-nouislider": "^2.0.0",
     "ng2-pdf-viewer": "^10.4.0",
     "ngx-color": "^10.0.0",
