add kpi category

--- a/client-osiris/package.json
+++ b/client-osiris/package.json
@@ -30,8 +30,8 @@
     "@ng-icons/tabler-icons": "^31.4.0",
     "@tanstack/angular-table": "^8.21.3",
     "angular-datatables": "^19.0.0",
-    "angular-shepherd": "^19.0.2",
     "angular-ng-autocomplete": "^2.0.12",
+    "angular-shepherd": "^19.0.2",
     "angular2-ladda": "^5.0.0",
     "angularx-flatpickr": "^8.1.0",
     "animate.css": "^4.1.1",
@@ -96,6 +96,7 @@
     "@angular-devkit/build-angular": "^19.2.8",
     "@angular/cli": "^19.2.8",
     "@angular/compiler-cli": "^19.2.11",
+    "@angular/language-service": "^19.2.17",
     "@types/datatables.net-select": "^1.2.10",
     "@types/daterangepicker": "^3.1.8",
     "@types/jasmine": "~5.1.0",
