--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation 'org.xhtmlrenderer:flying-saucer-pdf-itext5:9.7.1'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.17.0'
     implementation 'org.jsoup:jsoup:1.18.1'
+    implementation 'fr.opensagres.xdocreport:fr.opensagres.poi.xwpf.converter.xhtml:2.0.4'
+
 
     // QR code generation
     implementation 'com.google.zxing:core:3.5.3'
