--- a/build.gradle
+++ b/build.gradle
@@ -82,7 +82,7 @@ dependencies {
 }
  
 group = 'com.jss.osiris'
-version = '34-beta1' 
+version = '34' 
 description = 'Outil Sympa, Interactif, Révolutionnairement Intuitif et Simple'
 sourceCompatibility = '17'
 targetCompatibility = '17'
